k8s/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: springboot-route
spec:
  to:
    kind: Service
    name: springboot-service
  port:
    targetPort: 8080
